--- a/Webseguro/Views/Shared/_LoginPartial.cshtml
+++ b/Webseguro/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<Webseguro.Data.ApplicationUser> SignInManager
+@inject UserManager<Webseguro.Data.ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
