--- a/Webseguro/Views/Personas1/Create.cshtml
+++ b/Webseguro/Views/Personas1/Create.cshtml
@@ -33,6 +33,11 @@
                 <span asp-validation-for="Estado" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <label class="control-label">Genero</label>
+                <select asp-for="CodigoGenero" required class="form-control" asp-items="ViewBag.CodigoGenero"></select>
+                <span asp-validation-for="CodigoGenero" class="text-danger"></span>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
         </form>
