--- a/Webseguro/Views/Personas1/Index.cshtml
+++ b/Webseguro/Views/Personas1/Index.cshtml
@@ -39,18 +39,32 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Direccion)
             </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Estado)
-            </td>
+            <th>
+                @if (item.Estado == 1)
+                {
+                    <label>Activado</label>
+                }
+                else
+                {
+                    <label>Desactivado</label>
+                }
+            </th>
             <td>
                 @Html.ActionLink("Editar", "Edit", new { id = item.Codigo }, new
                { onclick = "return confirm('Esta seguro que quieres editar?');" }) |
-                @Html.ActionLink("Details", "Details", new{Codigo = item.Codigo}, new{onclick = "return confirm('Esta seguro que quieres ver los detalles?');"               }) |
+                @Html.ActionLink("Details", "Details", new { Codigo = item.Codigo }, new { onclick = "return confirm('Esta seguro que quieres ver los detalles?');" }) |
 
-                @Html.ActionLink("Eliminar", "Delete", new { id = item.Codigo },
-               new { onclick = "return confirm('Esta seguro que quieres eliminar?');" })
+                @if (item.Cambio == 1)
+                {
+                    @Html.ActionLink("Desactivar", "Desactivar", new { id = item.Codigo },
+               new { onclick = "return confirm('Esta seguro que quieres desactivar?');" })
+                }
+                else
+                {
+                    @Html.ActionLink("Activar", "Activar", new { id = item.Codigo },
+               new { onclick = "return confirm('Esta seguro que quieres activar?');" })
 
-
+                }
             </td>
         </tr>
 }
